# measuring-quality-of-life-gauteng

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  dvc.yaml  init.sh  notebook.ipynb  params.yaml  pyproject.toml  run-experiment.sh
.dvc/: .gitignore  config
.github/: pull_request_template.md
01-reproduction/: README.md
02-extension/: README.md
02-gauteng/: README.md
03-south-africa/: README.md
data/: README.md
data/basemap-metadata/: .gitignore  basemap-metadata.json.dvc
data/basemap-quads/: .gitignore
data/custom/: .gitignore  train_wards.csv.dvc
data/mosaiks-features/: .gitignore  mosaiks_features.csv.dvc
data/shapefiles/: .gitignore  2011.dvc  2016.dvc  2020.dvc
data/surveys/: .gitignore  gcro-2016-additional-data.sav.dvc  gcro-2016.dta.dvc  gcro-2018.dta.dvc  gcro-2021.dta.dvc
dvclive/: metrics.json
dvclive/fold_0/: metrics.json
dvclive/fold_0/plots/metrics/eval/: custom_r_squared.tsv  loss.tsv  mean_absolute_error.tsv  mean_absolute_percentage_error.tsv  mean_squared_error.tsv  r2_score.tsv  r_squared.tsv  root_mean_squared_error.tsv
dvclive/fold_0/plots/metrics/train/: custom_r_squared.tsv  loss.tsv  mean_absolute_error.tsv  mean_absolute_percentage_error.tsv  mean_squared_error.tsv  r2_score.tsv  r_squared.tsv  root_mean_squared_error.tsv
dvclive/fold_1/: metrics.json
dvclive/fold_1/plots/metrics/eval/: custom_r_squared.tsv  loss.tsv  mean_absolute_error.tsv  mean_absolute_percentage_error.tsv  mean_squared_error.tsv  r2_score.tsv  r_squared.tsv  root_mean_squared_error.tsv
dvclive/fold_1/plots/metrics/train/: custom_r_squared.tsv  loss.tsv  mean_absolute_error.tsv  mean_absolute_percentage_error.tsv  r2_score.tsv  (+3 more)
dvclive/fold_2/: metrics.json
dvclive/fold_3/: metrics.json
dvclive/fold_4/: metrics.json
dvclive/plots/metrics/eval/: custom_r_squared.tsv  loss.tsv  mean_absolute_error.tsv  mean_absolute_percentage_error.tsv  mean_squared_error.tsv  r2_score.tsv  r_squared.tsv  root_mean_squared_error.tsv
dvclive/plots/metrics/train/: custom_r_squared.tsv  loss.tsv  mean_absolute_error.tsv  mean_absolute_percentage_error.tsv  mean_squared_error.tsv  r2_score.tsv  r_squared.tsv  root_mean_squared_error.tsv
notebooks/: 2024-03-05.ipynb  2024-03-05_tile-cluster-matching.ipynb  2024-03-06.ipynb  2024-03-06_e2e-pipeline.ipynb  2024-03-19.ipynb  2024-03-19_qol-data-analysis-(again).ipynb  2024-03-20.ipynb  2024-03-20_resnet-training.ipynb  2024-05-19.ipynb  2024-05-20.ipynb  2024-05-20_apply-model.ipynb  2024-05-21.ipynb  2024-06-07_fold-scores.ipynb  2024-08-06_activation-maps.ipynb  2024-08-13_correlation.ipynb  2024-08-17_correlation_general.ipynb  2024-08-19_cluster_and_plot_predictions.ipynb  basic-model-spike.ipynb  chunk-satellite data.ipynb  chunk-satellite-data.ipynb  date-ranges-gcro-data.ipynb  dummy-tiling.ipynb  e2e-pipeline-rgb-basic.ipynb  gcro-analysis.ipynb  geotiff-to-png-conversion.ipynb  ndvi.ipynb  resnet-rgb.ipynb  resnet-tinkering.ipynb  sandbox.ipynb  satellite-data-spike.ipynb  shapefile-analysis.ipynb  test_gpu.ipynb  tile-satellite-data.ipynb
notebooks/.ipynb_checkpoints/: e2e-pipeline-rgb-basic-checkpoint.ipynb
notebooks/archived/: chunk-satellite-data.ipynb  date-ranges-gcro-data.ipynb  dummy-tiling.ipynb  e2e-pipeline-rgb-basic.ipynb  gcro-analysis.ipynb  geotiff-to-png-conversion.ipynb  ndvi.ipynb  resnet-rgb.ipynb  resnet-tinkering.ipynb  shapefile-analysis.ipynb  tile-satellite-data.ipynb
outputs/: .gitignore  clustered-data.csv  clustered-data.csv.dvc
outputs/checkpoints/: .gitignore
outputs/eval/: .gitignore  metrics.json
outputs/geojson/: .gitignore
outputs/grid/: .gitignore
outputs/matched/: .gitignore
outputs/merged/: .gitignore
outputs/merged/2018/: .gitignore
outputs/model/: .gitignore  train-validation-split.geojson
outputs/mosaiks-prediction/: .gitignore
outputs/processed-gcro/: .gitignore
outputs/processed-gcro/2021/: .gitignore
outputs/processed-shapefile/: .gitignore
outputs/processed-shapefile/2020/: .gitignore
outputs/processed_shapefile/: .gitignore  gauteng-boundary-unprocessed.png.dvc  gauteng-boundary.png.dvc  gauteng-wards.geojson.dvc  gauteng-wards.png.dvc
outputs/tiles/: .gitignore
src/models/: base_model.py  model_factory.py  model_types.py  resnet_model.py  vgg16_model.py
src/modules/10_predictions_and_plots/: main.py  plot.py  predict.py
src/modules/1_shapefile_processing/: shapefile_process.py
src/modules/2_gcro_processing/: gcro_constants.py  gcro_process.py
src/modules/3_data_download/: data_download.py
src/modules/4_gcro_shapefile_merge/: gcro_shapefile_map.py  gcro_shapefile_merge.py
src/modules/5_tiling/: get_tile_list.py  merge_geojson.py  tile.sbatch  tile_image.py  tile_images.py  tile_slurm.py
src/modules/6_tile_cluster_matching/: match_tiles.py
src/modules/7_data_splitting/: select_data.py  split_data.py
src/modules/7_test_data_split/: hold_out_test_data_split.py  test_data_split.py
src/modules/7_training/: train.py
src/modules/8_training/: keras_data_format_utils.py  train.py
src/modules/9_evaluation/: evaluate.py
src/modules/data_download/: README.md  data_download.py
src/modules/evaluation/: evaluate.py
src/modules/featurization/: featurize.py  random_convolutional_features.py  rcf_model.py
src/modules/gcro_processing/: gcro_process.py
src/modules/gcro_shapefile_merge/: gcro_shapefile_merge.py
src/modules/grid_generation/: generate_grid.py
src/modules/mosaiks_prediction/: predict.py
src/modules/preprocessing/: preprocess.py
src/modules/shapefile_processing/: shapefile_process.py
src/modules/tile_cluster_matching/: match_tiles.py
src/modules/tiling/: get_tile_list.py  merge_geojson.py  process_slurm_results.sh  tile.sbatch  tile_image.py  tile_images.py  tile_slurm.py
src/modules/training/: train.py
src/utils/: __init__.py  custom_r_squared.py  enum.py  enum_type.py  env_variable_keys.py  env_variables.py  file_utils.py  keras_data_format.py  load_env.py  load_processed_data.py  logger.py  r2_score.py  r2_score_wrapper.py  tensorflow_utils.py  test_data_split.py
(+48 files in other folders)
