[tool.poetry]
name = "measuring-quality-of-life"
version = "0.1.0"
description = ""
authors = ["Emily <emilyrosesteyn@gmail.com>"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
pandas = "^2.0.2"
rasterio = "^1.3.6"
geopandas = "^0.14.0"
rioxarray = "^0.15.0"
earthpy = "^0.9.4"
tqdm = "^4.65.0"
# Issue between poetry and tensorflow metadata since >=2.11
# Temporary workaround enforces versions here
tensorflow = "^2.13.0"
tensorflow-intel = "^2.13.0"
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = "^0.31.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
scikit-learn = "^1.3.0"
pydotplus = "^2.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
ruff = "^0.0.292"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
